dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_INIT(src/libs.h)
AM_CONFIG_HEADER(config.h)
SUBDIRS="src"
AC_SUBST(SUBDIRS)

dnl General settings for pktstat
dnl After changeing the version number, run autoconf!
PACKAGE="pktextr"
VERSION="0.1.5"
COPYRIGHT="Copyright (C) 2002-2008 Michiel Broek, All Rights Reserved"
SHORTRIGHT="Copyright (C) 2002-2008 M. Broek"
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(COPYRIGHT)
AC_PREFIX_DEFAULT(/opt/mbse)
GROUP="`id -gn`"
OWNER="`id -un`"
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT")
AC_DEFINE_UNQUOTED(SHORTRIGHT, "$SHORTRIGHT")
AC_SUBST(GROUP)
AC_SUBST(OWNER)
TARGET="$target"


dnl Checks for programs.
AC_PROG_CC
dnl Try to find GNU install
AC_CHECK_PROG(INSTALL, ginstall, ginstall)
AC_CHECK_PROG(INSTALL, install, install)
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_CHECK_PROG(TAR, tar, tar)
AC_CHECK_PROG(ZIP, zip, zip)
AC_PATH_PROG(CHOWN, chown, chown, /bin:/sbin:/usr/bin:/usr/sbin:)
CFLAGS="$CFLAGS -Wall -Wshadow -Wwrite-strings -Wstrict-prototypes"

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_TIME
AC_STRUCT_TIMEZONE

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STAT


AC_OUTPUT(
	Makefile.global
	FILE_ID.DIZ
)

